# c-cote

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.sh  build.yml  check-code-format.yml  check_code_format.sh  check_equivalence_tests.sh  check_headers.sh  check_include_guards.sh  ci.yml  cmake.yml  do_code_format.sh
examples/monitor/: monitor.c
examples/pubsub/: publisher.c  subscriber.c
examples/pubsub_namespace/: publisher_namespace1.c  subscriber_namespace1.c
examples/pubsub_topics/: publisher_topic1_topic2.c  subscriber_topic1.c  subscriber_topic1_topic2.c  subscriber_topic2.c  subscriber_topics.c
examples/reqrep/: requester.c  responder.c
inc/: cote.h
include/: cote.h
src/: cote.c
